force-app/main/default/objects/PrimeContractor__c/PrimeContractor__c.object-meta.xml
<CustomObject>
    <label>受注先</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>元請会社No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>