force-app/main/default/objects/PrimeContractor__c/fields/OrderedPropertyTrends1__c.field-meta.xml
<CustomField>
    <fullName>OrderedPropertyTrends1__c</fullName>
    <label>受注物件傾向1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>