force-app/main/default/objects/PrimeContractor__c/fields/OrderedPropertyTrends2__c.field-meta.xml
<CustomField>
    <fullName>OrderedPropertyTrends2__c</fullName>
    <label>受注物件傾向2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>