force-app/main/default/objects/PrimeContractor__c/fields/OrderedPropertyTrends3__c.field-meta.xml
<CustomField>
    <fullName>OrderedPropertyTrends3__c</fullName>
    <label>受注物件傾向3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>