force-app/main/default/objects/PrimeContractor__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <label>割合</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>