force-app/main/default/objects/PrimeContractor__c/fields/PercentageMemo__c.field-meta.xml
<CustomField>
    <fullName>PercentageMemo__c</fullName>
    <label>割合の補足</label>
    <length>255</length>
    <type>Text</type>
</CustomField>