force-app/main/default/objects/PrimeContractor__c/fields/PrimeContractorName__c.field-meta.xml
<CustomField>
    <fullName>PrimeContractorName__c</fullName>
    <label>元請会社名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>